# tink-go-awskms

./: BUILD.bazel  MIGRATION_V3.md  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  version.bzl
integration/awskms/: BUILD.bazel  aws_kms_aead.go  aws_kms_aead_test.go  aws_kms_client.go  aws_kms_client_test.go  aws_kms_integration_test.go  aws_kmsv2_aead.go  doc.go
integration/awskms/internal/fakeawskms/: BUILD.bazel  fakeawskms.go  fakeawskms_test.go
integration/awskmsv2/: aws_kms_aead.go  aws_kms_client.go
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/gcp_ubuntu/gomod/: run_tests.sh
kokoro/macos_external/bazel/: run_tests.sh
kokoro/macos_external/gomod/: run_tests.sh
testdata/aws/: README.md
v3/: go.mod  go.sum
v3/integration/awskms/: aws_kms_aead.go  aws_kms_client.go  aws_kms_client_test.go  aws_kms_integration_test.go
v3/integration/awskms/internal/fakeawskms/: fakeawskms.go  fakeawskms_test.go
