load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])  # keep

go_library(
    name = "fakeawskms",
    srcs = ["fakeawskms.go"],
    importpath = "github.com/tink-crypto/tink-go-awskms/v2/integration/awskms/internal/fakeawskms",
    deps = [
        "@com_github_tink_crypto_tink_go_v2//tink",
        "@com_github_tink_crypto_tink_go_v2//keyset",
        "@com_github_tink_crypto_tink_go_v2//aead",
        "@com_github_aws_aws_sdk_go//service/kms",
        "@com_github_aws_aws_sdk_go//service/kms/kmsiface",
    ],
)

go_test(
    name = "fakeawskms_test",
    srcs = ["fakeawskms_test.go"],
    embed = [":fakeawskms"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/kms",
    ],
)

alias(
    name = "go_default_library",
    actual = ":fakeawskms",
)
